# nyaa_archiver

./: .gitignore  Cargo.toml  README.md
frontend/: bootstrap-dark.min.css  bootstrap-select.min.css  bootstrap.min.css  common.js  font-awesome.min.css  help.html  index.css  index.html  index.js  login.html  login.js  main.css  main.html  register.html  register.js  rss.html  rules.html  torrent.html  torrent.js
migrations/2025-05-15-164122_create_posts/: down.sql  up.sql
migrations/2025-05-16-010352_create_users/: up.sql
migrations/2025-05-18-031123_create_comments/: up.sql
migrations/2025-06-19-171419_torrent_anon/: down.sql  up.sql
migrations/2025-07-30-010746_torrent_deleted/: down.sql  up.sql
migrations/2025-07-30-011119_torrent_last_updated/: down.sql  up.sql
migrations/2025-07-30-012838_user_trusted/: down.sql  up.sql
migrations/2025-07-31-203602_user_banned/: down.sql  up.sql
migrations/2025-07-31-203804_user_last_updated/: down.sql  up.sql
migrations/2025-08-02-034116_add_deleted_torrents/: down.sql  up.sql
migrations/2026-03-22-191829-0000_create_indexes/: down.sql  up.sql
migrations/2026-03-26-162510-0000_hidden_torrents/: down.sql  up.sql
migrations/2026-03-26-184343-0000_user_nyaa_admin/: down.sql  up.sql
src/: api.rs  delete_torrents.rs  generate_backlog.rs  js_api.rs.bak  lib.rs  models.rs  schema.rs  scrape.rs  scraper.rs  tasks.rs  tracker_stats.rs.bak  update_torrent.rs  util.rs  validate.rs  validate_infohash_field.rs  validate_size_field.rs
templates/: 404.html  error.html  home.html  layout.html  search_results.html
(+10 files in other folders)
